...
    <string name="validate_message_empty">필수 입력 항목입니다</string>
    <string name="validate_message_email">이메일 형식이어야 합니다</string>
    <!--  Splash Activity  -->


    <!--  Main Activity  -->
    <string name="main_tap_map_title">지도</string>
    <string name="main_tap_event_title">이벤트</string>
    <string name="main_tap_home_title">홈</string>
    <string name="main_tap_talk_title">톡톡</string>
    <string name="main_tap_user_title">내정보</string>

    <string name="main_location_warning">위치 정보를 수신할 수 없습니다. Wifi의 경우, 간헐적으로 위치 정보를 받아오지 못할 수 있습니다. 가용한 지역으로 설정됩니다.</string>
    <string name="main_network_warning">네트워크 요청을 실행할 수 없습니다. 네트워크를 확인 후에 다시 시도 해주십시오.</string>

    <string name="auth_button_login_text">로그인</string>
...
